# pynadc

./: .gitignore  INSTALL.md  LICENSE  README.md  README.rst  pyproject.toml  setup.cfg  setup.py
obsolete/: sdmf_calibSMR.py
pynadc/: __init__.py
pynadc/gosat/: __init__.py  db.py
pynadc/gosat2/: db.py  db_l2.py
pynadc/scia/: __init__.py  clus_def.py  db.py  hk.py  lv0.py  lv1.py
scripts/: add_entry_gosat.py  add_entry_gosat2.py  add_entry_gosat2_l2.py  add_entry_s5p.py  add_entry_scia.py  add_preproc_gosat.py  check_state_db.py  collect_scia_states.py  collect_stateDefs.py  icm_efm_patch.py  inquire_db.py  inquire_gosat.py  inquire_gosat2.py  inquire_gosat2_l2.py  inquire_s5p.py  inquire_scia.py  nadc_collect_stateDefs.py  scia_lv0.py  scia_lv1.py  sdmf_calibSMR.py
sources/pynadc/: __init__.py  extendedrainbow_with_outliers.py  sron_colorschemes.py  stats.py
sources/pynadc/gosat/: __init__.py  db.py
sources/pynadc/scia/: __init__.py  db.py  lv0.py  lv1.py
sources/pynadc/tropomi/: __init__.py  db.py  icm_io.py  icm_mon_db.py  icm_patch.py  icm_plot.py  ocm_io.py
src/gosat/: db.py
src/pynadc/gosat/: __init__.py  db.py
src/pynadc/gosat2/: __init__.py  db.py  db_l2.py
src/pynadc/scia/: __init__.py  clus_def.py  db.py  hk.py  lv0.py
src/scia/: db.py  lv0.py  lv1.py
testing/: check_gosatCAI_db.sh  check_gosatFTS_db.sh  check_sciaLv0_db.sh  check_sciaLv1_db.sh  check_sciaLv2_db.sh
