[metadata]
name = pynadc
description = Python Sciamachy/GOSAT/Tropomi read and SQLite3 library
license = BSD 3-Clause License
license_files = (LICENSE,)
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/rmvanhees/pynadc.git
author = Richard van Hees
author_email = r.m.van.hees@sron.nl
maintainer = Richard van Hees
maintainer_email = r.m.van.hees@sron.nl
classifiers=
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Atmospheric Science

[options]
zip_safe = False
package_dir =
   =src
packages = find:
scripts =
    scripts/add_entry_gosat.py
    scripts/add_entry_gosat2.py
    scripts/add_entry_gosat2_l2.py
    scripts/add_entry_scia.py
    scripts/collect_scia_states.py
    scripts/inquire_gosat.py
    scripts/inquire_gosat2.py
    scripts/inquire_gosat2_l2.py
    scripts/inquire_scia.py
    scripts/scia_lv0.py
    scripts/scia_lv1.py
install_requires =
    bitstring>=3.1
    numpy>=1.19
    h5py>=3.5
python_requires = >=3.8

[options.packages.find]
where = src

[options.extras_require]
toml = toml
